package tarea;

public class VisualMenu {

    public static void principal() {
        System.out.println("\n\t1. Ejercicio 1\t\t2. Ejercicio 2\n\t3. Ejercicio 3");
    }

    public static void ej1() {
        System.out.println("\n\t1. A)\t\t2. B)\n\t3. C)\t\t4. D)");
    }

    public static void ej2() {
        System.out.println("\n\t1. A)\t\t2. B)\n\t3. C)\t\t4. D)\n\t5. E)");
    }

    public static void ej3() {
        System.out.println("\n\t1. A)\t\t2. B)\n\t3. C)");
    }
}